src/grammatik/exp1.output
Terminale, die in Grammatik unbenutzt sind

   INTNUMBER


Grammatik

    0 $accept: start $end

    1 start: question
    2      | statement
    3      | other

    4 question: QWORD vp np

    5 statement: np vp np

    6 np: DETNOM nom
    7   | PROPN

    8 nom: ADJ nom
    9    | OBJECT

   10 vp: V

   11 other: UNKNOWN


Terminale und die Regeln, in denen sie verwendet werden

$end (0) 0
error (256)
INTNUMBER (258)
PROPN (259) 7
DETNOM (260) 6
OBJECT (261) 9
ADJ (262) 8
V (263) 10
QWORD (264) 4
UNKNOWN (265) 11


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (11)
    auf der linken Seite: 0
start (12)
    auf der linken Seite: 1 2 3, auf der rechten Seite: 0
question (13)
    auf der linken Seite: 4, auf der rechten Seite: 1
statement (14)
    auf der linken Seite: 5, auf der rechten Seite: 2
np (15)
    auf der linken Seite: 6 7, auf der rechten Seite: 4 5
nom (16)
    auf der linken Seite: 8 9, auf der rechten Seite: 6 8
vp (17)
    auf der linken Seite: 10, auf der rechten Seite: 4 5
other (18)
    auf der linken Seite: 11, auf der rechten Seite: 3


Zustand 0

    0 $accept: . start $end

    PROPN    schiebe und gehe zu Zustand 1 über
    DETNOM   schiebe und gehe zu Zustand 2 über
    QWORD    schiebe und gehe zu Zustand 3 über
    UNKNOWN  schiebe und gehe zu Zustand 4 über

    start      gehe zu Zustand 5 über
    question   gehe zu Zustand 6 über
    statement  gehe zu Zustand 7 über
    np         gehe zu Zustand 8 über
    other      gehe zu Zustand 9 über


Zustand 1

    7 np: PROPN .

    $default  reduziere mit Regel 7 (np)


Zustand 2

    6 np: DETNOM . nom

    OBJECT  schiebe und gehe zu Zustand 10 über
    ADJ     schiebe und gehe zu Zustand 11 über

    nom  gehe zu Zustand 12 über


Zustand 3

    4 question: QWORD . vp np

    V  schiebe und gehe zu Zustand 13 über

    vp  gehe zu Zustand 14 über


Zustand 4

   11 other: UNKNOWN .

    $default  reduziere mit Regel 11 (other)


Zustand 5

    0 $accept: start . $end

    $end  schiebe und gehe zu Zustand 15 über


Zustand 6

    1 start: question .

    $default  reduziere mit Regel 1 (start)


Zustand 7

    2 start: statement .

    $default  reduziere mit Regel 2 (start)


Zustand 8

    5 statement: np . vp np

    V  schiebe und gehe zu Zustand 13 über

    vp  gehe zu Zustand 16 über


Zustand 9

    3 start: other .

    $default  reduziere mit Regel 3 (start)


Zustand 10

    9 nom: OBJECT .

    $default  reduziere mit Regel 9 (nom)


Zustand 11

    8 nom: ADJ . nom

    OBJECT  schiebe und gehe zu Zustand 10 über
    ADJ     schiebe und gehe zu Zustand 11 über

    nom  gehe zu Zustand 17 über


Zustand 12

    6 np: DETNOM nom .

    $default  reduziere mit Regel 6 (np)


Zustand 13

   10 vp: V .

    $default  reduziere mit Regel 10 (vp)


Zustand 14

    4 question: QWORD vp . np

    PROPN   schiebe und gehe zu Zustand 1 über
    DETNOM  schiebe und gehe zu Zustand 2 über

    np  gehe zu Zustand 18 über


Zustand 15

    0 $accept: start $end .

    $default  annehmen


Zustand 16

    5 statement: np vp . np

    PROPN   schiebe und gehe zu Zustand 1 über
    DETNOM  schiebe und gehe zu Zustand 2 über

    np  gehe zu Zustand 19 über


Zustand 17

    8 nom: ADJ nom .

    $default  reduziere mit Regel 8 (nom)


Zustand 18

    4 question: QWORD vp np .

    $default  reduziere mit Regel 4 (question)


Zustand 19

    5 statement: np vp np .

    $default  reduziere mit Regel 5 (statement)
